# quote-server

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.sqlx/: query-279ae16c1abafa9037b1812c009c25211e86658dcc8b95b109065b33f0e07345.json  query-63b8ea439d90b4a25d79da364e756cab673021acc95e85789296b876a0388e59.json  query-7e12a80e0efaeaae90e8a3d0c963c24b2357e168ae75b8e901dd66372d10dd1f.json  query-a1435a9012ef0f7876825b33e1e985fd770d5e20dd5c8dd3dc530ff9c50a6d28.json  query-c1fbf9fad5c99c45dee8adc4c55762f46ce527a83318d18ee6e9afa57bda5a82.json
assets/static/: index.css
assets/templates/: index.html
db/: quote-server  quote-server-shm  quote-server-wal
migrations/: 0001_create_basics.down.sql  0001_create_basics.up.sql
seed-quotes/: quotes.csv
src/: api.rs  handlers.rs  main.rs  quote.rs  templates.rs
