[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.13.1"
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive"] }
fastrand = "2.3.0"
log = "0.4.27"
mime = "0.3.17"
serde_json = "1.0.140"
simple_logger = "5.0.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.tower-http]
version = "0.6.2"
features = ["fs", "trace"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono", "json"]

[dependencies.utoipa]
version = "5.3.1"
features = ["axum_extras"]

[dependencies.utoipa-axum]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
